CODEX- reduce ExcelWrite backend to atomic artifact writes